[tool.poetry]
name = "fasttower-docs"
version = "0.1.0"
description = ""
authors = ["sasha <sasha.2000ibr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.44"
mdx-include = "^1.4.2"
mkdocs-redirects = "^1.2.2"
markdown-include-variants = "^0.0.3"
mkdocs-macros-plugin = "^1.3.7"
mkdocstrings = {extras = ["python"], version = "^0.26.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
